# sticker

./: .gitignore  CMakeLists.txt
src/: graphic_objects.cpp  graphic_objects.h  main.cpp  sticker.cpp  sticker.h  sticker_objects.cpp  sticker_objects.h  window.cpp  window.h  window_class.cpp  window_class.h
